src/analizadorSintactico/y.output
   0  $accept : programa $end

   1  programa : ID bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables END ';'
   2           | ID BEGIN END ';'
   3           | ID BEGIN bloque_sentencias_ejecutables END ';'
   4           | ID bloque_sentencias_declarativas BEGIN END ';'
   5           | ID bloque_sentencias_declarativas bloque_sentencias_ejecutables error
   6           | ID bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables ';' error
   7           | ID bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables END error

   8  bloque : sentencias
   9         | bloque sentencias

  10  bloque_de_sentencias : BEGIN bloque END ';'
  11                       | BEGIN END ';'
  12                       | sentencias
  13                       | bloque END ';' error
  14                       | BEGIN bloque ';' error
  15                       | BEGIN bloque END error

  16  bloque_sentencias_while : sentencias_while
  17                          | bloque_sentencias_while sentencias_while

  18  bloque_sentencias_ejecutables_funcion : sentencias_ejecutables_func
  19                                        | bloque_sentencias_ejecutables_funcion sentencias_ejecutables_func

  20  bloque_sentencias_ejecutables : sentencias_ejecutables
  21                                | bloque_sentencias_ejecutables sentencias_ejecutables

  22  bloque_sentencias_declarativas : sentencias_declarativas
  23                                 | bloque_sentencias_declarativas sentencias_declarativas

  24  sentencias : sentencias_declarativas
  25             | sentencias_ejecutables

  26  sentencias_declarativas : tipo lista_de_variables ';'
  27                          | tipo lista_de_variables error
  28                          | tipo error
  29                          | declaracion_func
  30                          | FUNC lista_de_variables ';'
  31                          | FUNC lista_de_variables error ';'

  32  lista_de_variables : ID
  33                     | lista_de_variables ',' ID
  34                     | lista_de_variables ID error

  35  encabezado_func : tipo FUNC ID '(' parametro ')'
  36                  | FUNC ID '(' parametro ')' error
  37                  | tipo ID '(' parametro ')' error
  38                  | tipo FUNC ID parametro error
  39                  | tipo FUNC ID '(' ')' error
  40                  | tipo FUNC ID '(' parametro error

  41  declaracion_func : encabezado_func bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END ';'
  42                   | encabezado_func BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END ';'
  43                   | encabezado_func bloque_sentencias_declarativas BEGIN RETURN '(' expresion ')' ';' END ';'
  44                   | encabezado_func BEGIN RETURN '(' expresion ')' ';' END ';'
  45                   | encabezado_func bloque_sentencias_declarativas bloque_sentencias_ejecutables_funcion error
  46                   | encabezado_func bloque_sentencias_ejecutables_funcion error
  47                   | encabezado_func bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion END error
  48                   | encabezado_func BEGIN bloque_sentencias_ejecutables_funcion END error
  49                   | encabezado_func bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN expresion error
  50                   | encabezado_func BEGIN bloque_sentencias_ejecutables_funcion RETURN expresion error
  51                   | encabezado_func bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' ')' error
  52                   | encabezado_func BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' ')' error
  53                   | encabezado_func bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ';' error
  54                   | encabezado_func BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ';' error
  55                   | encabezado_func bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' END error
  56                   | encabezado_func BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' END error
  57                   | encabezado_func bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' ';' error
  58                   | encabezado_func BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' ';' error
  59                   | encabezado_func bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END error
  60                   | encabezado_func BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END error
  61                   | encabezado_func bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' bloque_sentencias_ejecutables_funcion error ';'
  62                   | encabezado_func BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' bloque_sentencias_ejecutables_funcion error ';'

  63  parametro : tipo ID

  64  sentencias_ejecutables : asignacion
  65                         | salida
  66                         | invocacion_func
  67                         | sentencia_if
  68                         | sentencia_while
  69                         | sentencia_try_catch

  70  asignacion : ID OPASIGNACION expresion ';'
  71             | ID OPASIGNACION expresion error
  72             | ID expresion error
  73             | ID OPASIGNACION error

  74  salida : PRINT '(' CADENA ')' ';'
  75         | PRINT '(' CADENA ')' error
  76         | PRINT '(' CADENA error ';'
  77         | PRINT CADENA error ';'
  78         | '(' CADENA error
  79         | PRINT '(' ')' error ';'

  80  invocacion_func : ID '(' ID ')' ';'
  81                  | ID '(' CTE ')' ';'
  82                  | ID '(' ')' error ';'
  83                  | ID '(' ID ')' error
  84                  | ID '(' CTE ')' error

  85  sentencia_if : IF '(' condicion ')' THEN cuerpo_if ENDIF ';'
  86               | IF '(' condicion ')' THEN cuerpo_if ELSE cuerpo_else ENDIF ';'
  87               | IF condicion error
  88               | IF '(' condicion THEN error
  89               | IF '(' condicion ')' cuerpo_if error
  90               | IF '(' condicion ')' THEN cuerpo_if error ';'
  91               | IF '(' condicion ')' THEN cuerpo_if ENDIF error
  92               | IF '(' condicion ')' THEN cuerpo_if ELSE cuerpo_else error ';'
  93               | IF '(' condicion ')' THEN cuerpo_if ELSE cuerpo_else ENDIF error

  94  cuerpo_if : bloque_de_sentencias

  95  cuerpo_else : bloque_de_sentencias

  96  sentencia_while : WHILE '(' condicion ')' DO BEGIN bloque_sentencias_while END ';'
  97                  | WHILE '(' condicion ')' DO BEGIN END ';'
  98                  | WHILE '(' condicion ')' DO sentencias_while
  99                  | WHILE condicion error
 100                  | WHILE '(' condicion DO error
 101                  | WHILE '(' condicion ')' BEGIN error
 102                  | WHILE '(' condicion ')' DO BEGIN bloque_sentencias_while ';' error
 103                  | WHILE '(' condicion ')' DO BEGIN bloque_sentencias_while END error

 104  sentencias_ejecutables_sin_try_catch : asignacion
 105                                       | salida
 106                                       | invocacion_func
 107                                       | sentencia_if
 108                                       | sentencia_while
 109                                       | sentencia_try_catch error

 110  sentencia_try_catch : TRY sentencias_ejecutables_sin_try_catch CATCH BEGIN bloque_sentencias_ejecutables END ';'
 111                      | TRY sentencias_ejecutables_sin_try_catch BEGIN error
 112                      | TRY sentencias_ejecutables_sin_try_catch CATCH bloque_sentencias_ejecutables error
 113                      | TRY sentencias_ejecutables_sin_try_catch CATCH BEGIN bloque_sentencias_ejecutables ';' error
 114                      | TRY sentencias_ejecutables_sin_try_catch CATCH BEGIN bloque_sentencias_ejecutables END error

 115  sentencias_ejecutables_func : sentencias_ejecutables
 116                              | contrato

 117  sentencias_while : sentencias_ejecutables
 118                   | sentencias_declarativas
 119                   | sentencia_break

 120  contrato : CONTRACT ':' '(' condicion ')' ';'
 121           | CONTRACT ':' condicion error
 122           | CONTRACT ':' '(' ')' error
 123           | CONTRACT ':' '(' condicion ';' error
 124           | CONTRACT ':' '(' condicion ')' error

 125  sentencia_break : BREAK ';'
 126                  | BREAK error

 127  condicion : expresion
 128            | condicion comparador expresion

 129  expresion : expresion '+' termino
 130            | expresion '-' termino
 131            | termino

 132  termino : termino '*' factor
 133          | termino '/' factor
 134          | factor

 135  factor : ID
 136         | CTE
 137         | '-' CTE

 138  comparador : '<'
 139             | '>'
 140             | MENORIGUAL
 141             | MAYORIGUAL
 142             | IGUAL
 143             | DISTINTO
 144             | AND
 145             | OR

 146  tipo : LONG
 147       | SINGLE

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2


state 1
	programa : ID . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables END ';'  (1)
	programa : ID . BEGIN END ';'  (2)
	programa : ID . BEGIN bloque_sentencias_ejecutables END ';'  (3)
	programa : ID . bloque_sentencias_declarativas BEGIN END ';'  (4)
	programa : ID . bloque_sentencias_declarativas bloque_sentencias_ejecutables error  (5)
	programa : ID . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables ';' error  (6)
	programa : ID . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables END error  (7)

	FUNC  shift 3
	BEGIN  shift 4
	LONG  shift 5
	SINGLE  shift 6
	.  error

	bloque_sentencias_declarativas  goto 7
	sentencias_declarativas  goto 8
	tipo  goto 9
	declaracion_func  goto 10
	encabezado_func  goto 11


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	sentencias_declarativas : FUNC . lista_de_variables ';'  (30)
	sentencias_declarativas : FUNC . lista_de_variables error ';'  (31)
	encabezado_func : FUNC . ID '(' parametro ')' error  (36)

	ID  shift 12
	.  error

	lista_de_variables  goto 13


state 4
	programa : ID BEGIN . END ';'  (2)
	programa : ID BEGIN . bloque_sentencias_ejecutables END ';'  (3)

	ID  shift 14
	IF  shift 15
	PRINT  shift 16
	END  shift 17
	WHILE  shift 18
	TRY  shift 19
	'('  shift 20
	.  error

	bloque_sentencias_ejecutables  goto 21
	sentencias_ejecutables  goto 22
	asignacion  goto 23
	salida  goto 24
	invocacion_func  goto 25
	sentencia_if  goto 26
	sentencia_while  goto 27
	sentencia_try_catch  goto 28


state 5
	tipo : LONG .  (146)

	.  reduce 146


state 6
	tipo : SINGLE .  (147)

	.  reduce 147


state 7
	programa : ID bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables END ';'  (1)
	programa : ID bloque_sentencias_declarativas . BEGIN END ';'  (4)
	programa : ID bloque_sentencias_declarativas . bloque_sentencias_ejecutables error  (5)
	programa : ID bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables ';' error  (6)
	programa : ID bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables END error  (7)
	bloque_sentencias_declarativas : bloque_sentencias_declarativas . sentencias_declarativas  (23)

	ID  shift 14
	IF  shift 15
	PRINT  shift 16
	FUNC  shift 3
	BEGIN  shift 29
	LONG  shift 5
	SINGLE  shift 6
	WHILE  shift 18
	TRY  shift 19
	'('  shift 20
	.  error

	bloque_sentencias_ejecutables  goto 30
	sentencias_ejecutables  goto 22
	sentencias_declarativas  goto 31
	tipo  goto 9
	declaracion_func  goto 10
	encabezado_func  goto 11
	asignacion  goto 23
	salida  goto 24
	invocacion_func  goto 25
	sentencia_if  goto 26
	sentencia_while  goto 27
	sentencia_try_catch  goto 28


state 8
	bloque_sentencias_declarativas : sentencias_declarativas .  (22)

	.  reduce 22


state 9
	sentencias_declarativas : tipo . lista_de_variables ';'  (26)
	sentencias_declarativas : tipo . lista_de_variables error  (27)
	sentencias_declarativas : tipo . error  (28)
	encabezado_func : tipo . FUNC ID '(' parametro ')'  (35)
	encabezado_func : tipo . ID '(' parametro ')' error  (37)
	encabezado_func : tipo . FUNC ID parametro error  (38)
	encabezado_func : tipo . FUNC ID '(' ')' error  (39)
	encabezado_func : tipo . FUNC ID '(' parametro error  (40)

	error  shift 32
	ID  shift 33
	FUNC  shift 34
	.  error

	lista_de_variables  goto 35


state 10
	sentencias_declarativas : declaracion_func .  (29)

	.  reduce 29


state 11
	declaracion_func : encabezado_func . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END ';'  (41)
	declaracion_func : encabezado_func . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END ';'  (42)
	declaracion_func : encabezado_func . bloque_sentencias_declarativas BEGIN RETURN '(' expresion ')' ';' END ';'  (43)
	declaracion_func : encabezado_func . BEGIN RETURN '(' expresion ')' ';' END ';'  (44)
	declaracion_func : encabezado_func . bloque_sentencias_declarativas bloque_sentencias_ejecutables_funcion error  (45)
	declaracion_func : encabezado_func . bloque_sentencias_ejecutables_funcion error  (46)
	declaracion_func : encabezado_func . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion END error  (47)
	declaracion_func : encabezado_func . BEGIN bloque_sentencias_ejecutables_funcion END error  (48)
	declaracion_func : encabezado_func . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN expresion error  (49)
	declaracion_func : encabezado_func . BEGIN bloque_sentencias_ejecutables_funcion RETURN expresion error  (50)
	declaracion_func : encabezado_func . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' ')' error  (51)
	declaracion_func : encabezado_func . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' ')' error  (52)
	declaracion_func : encabezado_func . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ';' error  (53)
	declaracion_func : encabezado_func . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ';' error  (54)
	declaracion_func : encabezado_func . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' END error  (55)
	declaracion_func : encabezado_func . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' END error  (56)
	declaracion_func : encabezado_func . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' ';' error  (57)
	declaracion_func : encabezado_func . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' ';' error  (58)
	declaracion_func : encabezado_func . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END error  (59)
	declaracion_func : encabezado_func . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END error  (60)
	declaracion_func : encabezado_func . bloque_sentencias_declarativas BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' bloque_sentencias_ejecutables_funcion error ';'  (61)
	declaracion_func : encabezado_func . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' bloque_sentencias_ejecutables_funcion error ';'  (62)

	ID  shift 14
	IF  shift 15
	PRINT  shift 16
	FUNC  shift 3
	BEGIN  shift 36
	LONG  shift 5
	SINGLE  shift 6
	WHILE  shift 18
	CONTRACT  shift 37
	TRY  shift 19
	'('  shift 20
	.  error

	bloque_sentencias_declarativas  goto 38
	bloque_sentencias_ejecutables_funcion  goto 39
	sentencias_ejecutables_func  goto 40
	sentencias_ejecutables  goto 41
	sentencias_declarativas  goto 8
	tipo  goto 9
	declaracion_func  goto 10
	encabezado_func  goto 11
	asignacion  goto 23
	salida  goto 24
	invocacion_func  goto 25
	sentencia_if  goto 26
	sentencia_while  goto 27
	sentencia_try_catch  goto 28
	contrato  goto 42


state 12
	lista_de_variables : ID .  (32)
	encabezado_func : FUNC ID . '(' parametro ')' error  (36)

	'('  shift 43
	error  reduce 32
	ID  reduce 32
	';'  reduce 32
	','  reduce 32


state 13
	sentencias_declarativas : FUNC lista_de_variables . ';'  (30)
	sentencias_declarativas : FUNC lista_de_variables . error ';'  (31)
	lista_de_variables : lista_de_variables . ',' ID  (33)
	lista_de_variables : lista_de_variables . ID error  (34)

	error  shift 44
	ID  shift 45
	';'  shift 46
	','  shift 47
	.  error


state 14
	asignacion : ID . OPASIGNACION expresion ';'  (70)
	asignacion : ID . OPASIGNACION expresion error  (71)
	asignacion : ID . expresion error  (72)
	asignacion : ID . OPASIGNACION error  (73)
	invocacion_func : ID . '(' ID ')' ';'  (80)
	invocacion_func : ID . '(' CTE ')' ';'  (81)
	invocacion_func : ID . '(' ')' error ';'  (82)
	invocacion_func : ID . '(' ID ')' error  (83)
	invocacion_func : ID . '(' CTE ')' error  (84)

	ID  shift 48
	CTE  shift 49
	OPASIGNACION  shift 50
	'('  shift 51
	'-'  shift 52
	.  error

	expresion  goto 53
	termino  goto 54
	factor  goto 55


state 15
	sentencia_if : IF . '(' condicion ')' THEN cuerpo_if ENDIF ';'  (85)
	sentencia_if : IF . '(' condicion ')' THEN cuerpo_if ELSE cuerpo_else ENDIF ';'  (86)
	sentencia_if : IF . condicion error  (87)
	sentencia_if : IF . '(' condicion THEN error  (88)
	sentencia_if : IF . '(' condicion ')' cuerpo_if error  (89)
	sentencia_if : IF . '(' condicion ')' THEN cuerpo_if error ';'  (90)
	sentencia_if : IF . '(' condicion ')' THEN cuerpo_if ENDIF error  (91)
	sentencia_if : IF . '(' condicion ')' THEN cuerpo_if ELSE cuerpo_else error ';'  (92)
	sentencia_if : IF . '(' condicion ')' THEN cuerpo_if ELSE cuerpo_else ENDIF error  (93)

	ID  shift 48
	CTE  shift 49
	'('  shift 56
	'-'  shift 52
	.  error

	expresion  goto 57
	condicion  goto 58
	termino  goto 54
	factor  goto 55


state 16
	salida : PRINT . '(' CADENA ')' ';'  (74)
	salida : PRINT . '(' CADENA ')' error  (75)
	salida : PRINT . '(' CADENA error ';'  (76)
	salida : PRINT . CADENA error ';'  (77)
	salida : PRINT . '(' ')' error ';'  (79)

	CADENA  shift 59
	'('  shift 60
	.  error


state 17
	programa : ID BEGIN END . ';'  (2)

	';'  shift 61
	.  error


state 18
	sentencia_while : WHILE . '(' condicion ')' DO BEGIN bloque_sentencias_while END ';'  (96)
	sentencia_while : WHILE . '(' condicion ')' DO BEGIN END ';'  (97)
	sentencia_while : WHILE . '(' condicion ')' DO sentencias_while  (98)
	sentencia_while : WHILE . condicion error  (99)
	sentencia_while : WHILE . '(' condicion DO error  (100)
	sentencia_while : WHILE . '(' condicion ')' BEGIN error  (101)
	sentencia_while : WHILE . '(' condicion ')' DO BEGIN bloque_sentencias_while ';' error  (102)
	sentencia_while : WHILE . '(' condicion ')' DO BEGIN bloque_sentencias_while END error  (103)

	ID  shift 48
	CTE  shift 49
	'('  shift 62
	'-'  shift 52
	.  error

	expresion  goto 57
	condicion  goto 63
	termino  goto 54
	factor  goto 55


state 19
	sentencia_try_catch : TRY . sentencias_ejecutables_sin_try_catch CATCH BEGIN bloque_sentencias_ejecutables END ';'  (110)
	sentencia_try_catch : TRY . sentencias_ejecutables_sin_try_catch BEGIN error  (111)
	sentencia_try_catch : TRY . sentencias_ejecutables_sin_try_catch CATCH bloque_sentencias_ejecutables error  (112)
	sentencia_try_catch : TRY . sentencias_ejecutables_sin_try_catch CATCH BEGIN bloque_sentencias_ejecutables ';' error  (113)
	sentencia_try_catch : TRY . sentencias_ejecutables_sin_try_catch CATCH BEGIN bloque_sentencias_ejecutables END error  (114)

	ID  shift 14
	IF  shift 15
	PRINT  shift 16
	WHILE  shift 18
	TRY  shift 19
	'('  shift 20
	.  error

	asignacion  goto 64
	salida  goto 65
	invocacion_func  goto 66
	sentencia_if  goto 67
	sentencia_while  goto 68
	sentencia_try_catch  goto 69
	sentencias_ejecutables_sin_try_catch  goto 70


state 20
	salida : '(' . CADENA error  (78)

	CADENA  shift 71
	.  error


state 21
	programa : ID BEGIN bloque_sentencias_ejecutables . END ';'  (3)
	bloque_sentencias_ejecutables : bloque_sentencias_ejecutables . sentencias_ejecutables  (21)

	ID  shift 14
	IF  shift 15
	PRINT  shift 16
	END  shift 72
	WHILE  shift 18
	TRY  shift 19
	'('  shift 20
	.  error

	sentencias_ejecutables  goto 73
	asignacion  goto 23
	salida  goto 24
	invocacion_func  goto 25
	sentencia_if  goto 26
	sentencia_while  goto 27
	sentencia_try_catch  goto 28


state 22
	bloque_sentencias_ejecutables : sentencias_ejecutables .  (20)

	.  reduce 20


state 23
	sentencias_ejecutables : asignacion .  (64)

	.  reduce 64


state 24
	sentencias_ejecutables : salida .  (65)

	.  reduce 65


state 25
	sentencias_ejecutables : invocacion_func .  (66)

	.  reduce 66


state 26
	sentencias_ejecutables : sentencia_if .  (67)

	.  reduce 67


state 27
	sentencias_ejecutables : sentencia_while .  (68)

	.  reduce 68


state 28
	sentencias_ejecutables : sentencia_try_catch .  (69)

	.  reduce 69


state 29
	programa : ID bloque_sentencias_declarativas BEGIN . bloque_sentencias_ejecutables END ';'  (1)
	programa : ID bloque_sentencias_declarativas BEGIN . END ';'  (4)
	programa : ID bloque_sentencias_declarativas BEGIN . bloque_sentencias_ejecutables ';' error  (6)
	programa : ID bloque_sentencias_declarativas BEGIN . bloque_sentencias_ejecutables END error  (7)

	ID  shift 14
	IF  shift 15
	PRINT  shift 16
	END  shift 74
	WHILE  shift 18
	TRY  shift 19
	'('  shift 20
	.  error

	bloque_sentencias_ejecutables  goto 75
	sentencias_ejecutables  goto 22
	asignacion  goto 23
	salida  goto 24
	invocacion_func  goto 25
	sentencia_if  goto 26
	sentencia_while  goto 27
	sentencia_try_catch  goto 28


state 30
	programa : ID bloque_sentencias_declarativas bloque_sentencias_ejecutables . error  (5)
	bloque_sentencias_ejecutables : bloque_sentencias_ejecutables . sentencias_ejecutables  (21)

	error  shift 76
	ID  shift 14
	IF  shift 15
	PRINT  shift 16
	WHILE  shift 18
	TRY  shift 19
	'('  shift 20
	.  error

	sentencias_ejecutables  goto 73
	asignacion  goto 23
	salida  goto 24
	invocacion_func  goto 25
	sentencia_if  goto 26
	sentencia_while  goto 27
	sentencia_try_catch  goto 28


state 31
	bloque_sentencias_declarativas : bloque_sentencias_declarativas sentencias_declarativas .  (23)

	.  reduce 23


state 32
	sentencias_declarativas : tipo error .  (28)

	.  reduce 28


state 33
	lista_de_variables : ID .  (32)
	encabezado_func : tipo ID . '(' parametro ')' error  (37)

	'('  shift 77
	error  reduce 32
	ID  reduce 32
	';'  reduce 32
	','  reduce 32


state 34
	encabezado_func : tipo FUNC . ID '(' parametro ')'  (35)
	encabezado_func : tipo FUNC . ID parametro error  (38)
	encabezado_func : tipo FUNC . ID '(' ')' error  (39)
	encabezado_func : tipo FUNC . ID '(' parametro error  (40)

	ID  shift 78
	.  error


state 35
	sentencias_declarativas : tipo lista_de_variables . ';'  (26)
	sentencias_declarativas : tipo lista_de_variables . error  (27)
	lista_de_variables : lista_de_variables . ',' ID  (33)
	lista_de_variables : lista_de_variables . ID error  (34)

	error  shift 79
	ID  shift 45
	';'  shift 80
	','  shift 47
	.  error


state 36
	declaracion_func : encabezado_func BEGIN . bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END ';'  (42)
	declaracion_func : encabezado_func BEGIN . RETURN '(' expresion ')' ';' END ';'  (44)
	declaracion_func : encabezado_func BEGIN . bloque_sentencias_ejecutables_funcion END error  (48)
	declaracion_func : encabezado_func BEGIN . bloque_sentencias_ejecutables_funcion RETURN expresion error  (50)
	declaracion_func : encabezado_func BEGIN . bloque_sentencias_ejecutables_funcion RETURN '(' ')' error  (52)
	declaracion_func : encabezado_func BEGIN . bloque_sentencias_ejecutables_funcion RETURN '(' expresion ';' error  (54)
	declaracion_func : encabezado_func BEGIN . bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' END error  (56)
	declaracion_func : encabezado_func BEGIN . bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' ';' error  (58)
	declaracion_func : encabezado_func BEGIN . bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END error  (60)
	declaracion_func : encabezado_func BEGIN . bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' bloque_sentencias_ejecutables_funcion error ';'  (62)

	ID  shift 14
	IF  shift 15
	PRINT  shift 16
	RETURN  shift 81
	WHILE  shift 18
	CONTRACT  shift 37
	TRY  shift 19
	'('  shift 20
	.  error

	bloque_sentencias_ejecutables_funcion  goto 82
	sentencias_ejecutables_func  goto 40
	sentencias_ejecutables  goto 41
	asignacion  goto 23
	salida  goto 24
	invocacion_func  goto 25
	sentencia_if  goto 26
	sentencia_while  goto 27
	sentencia_try_catch  goto 28
	contrato  goto 42


state 37
	contrato : CONTRACT . ':' '(' condicion ')' ';'  (120)
	contrato : CONTRACT . ':' condicion error  (121)
	contrato : CONTRACT . ':' '(' ')' error  (122)
	contrato : CONTRACT . ':' '(' condicion ';' error  (123)
	contrato : CONTRACT . ':' '(' condicion ')' error  (124)

	':'  shift 83
	.  error


state 38
	bloque_sentencias_declarativas : bloque_sentencias_declarativas . sentencias_declarativas  (23)
	declaracion_func : encabezado_func bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END ';'  (41)
	declaracion_func : encabezado_func bloque_sentencias_declarativas . BEGIN RETURN '(' expresion ')' ';' END ';'  (43)
	declaracion_func : encabezado_func bloque_sentencias_declarativas . bloque_sentencias_ejecutables_funcion error  (45)
	declaracion_func : encabezado_func bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables_funcion END error  (47)
	declaracion_func : encabezado_func bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables_funcion RETURN expresion error  (49)
	declaracion_func : encabezado_func bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' ')' error  (51)
	declaracion_func : encabezado_func bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ';' error  (53)
	declaracion_func : encabezado_func bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' END error  (55)
	declaracion_func : encabezado_func bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' ';' error  (57)
	declaracion_func : encabezado_func bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' END error  (59)
	declaracion_func : encabezado_func bloque_sentencias_declarativas . BEGIN bloque_sentencias_ejecutables_funcion RETURN '(' expresion ')' ';' bloque_sentencias_ejecutables_funcion error ';'  (61)

	ID  shift 14
	IF  shift 15
	PRINT  shift 16
	FUNC  shift 3
	BEGIN  shift 84
	LONG  shift 5
	SINGLE  shift 6
	WHILE  shift 18
	CONTRACT  shift 37
	TRY  shift 19
	'('  shift 20
	.  error

	bloque_sentencias_ejecutables_funcion  goto 85
	sentencias_ejecutables_func  goto 40
	sentencias_ejecutables  goto 41
	sentencias_declarativas  goto 31
	tipo  goto 9
	declaracion_func  goto 10
	encabezado_func  goto 11
	asignacion  goto 23
	salida  goto 24
	invocacion_func  goto 25
	sentencia_if  goto 26
	sentencia_while  goto 27
	sentencia_try_catch  goto 28
	contrato  goto 42


state 39
	bloque_sentencias_ejecutables_funcion : bloque_sentencias_ejecutables_funcion . sentencias_ejecutables_func  (19)
	declaracion_func : encabezado_func bloque_sentencias_ejecutables_funcion . error  (46)

	error  shift 86
	ID  shift 14
	IF  shift 15
	PRINT  shift 16
	WHILE  shift 18
	CONTRACT  shift 37
	TRY  shift 19
	'('  shift 20
	.  error

	sentencias_ejecutables_func  goto 87
	sentencias_ejecutables  goto 41
	asignacion  goto 23
	salida  goto 24
	invocacion_func  goto 25
	sentencia_if  goto 26
	sentencia_while  goto 27
	sentencia_try_catch  goto 28
	contrato  goto 42


state 40
	bloque_sentencias_ejecutables_funcion : sentencias_ejecutables_func .  (18)

	.  reduce 18


state 41
	sentencias_ejecutables_func : sentencias_ejecutables .  (115)

	.  reduce 115


state 42
	sentencias_ejecutables_func : contrato .  (116)

	.  reduce 116


state 43
	encabezado_func : FUNC ID '(' . parametro ')' error  (36)

	LONG  shift 5
	SINGLE  shift 6
	.  error

	tipo  goto 88
	parametro  goto 89


state 44
	sentencias_declarativas : FUNC lista_de_variables error . ';'  (31)

	';'  shift 90
	.  error


state 45
	lista_de_variables : lista_de_variables ID . error  (34)

	error  shift 91
	.  error


state 46
	sentencias_declarativas : FUNC lista_de_variables ';' .  (30)

	.  reduce 30


state 47
	lista_de_variables : lista_de_variables ',' . ID  (33)

	ID  shift 92
	.  error


state 48
	factor : ID .  (135)

	.  reduce 135


state 49
	factor : CTE .  (136)

	.  reduce 136


state 50
	asignacion : ID OPASIGNACION . expresion ';'  (70)
	asignacion : ID OPASIGNACION . expresion error  (71)
	asignacion : ID OPASIGNACION . error  (73)

	error  shift 93
	ID  shift 48
	CTE  shift 49
	'-'  shift 52
	.  error

	expresion  goto 94
	termino  goto 54
	factor  goto 55


state 51
	invocacion_func : ID '(' . ID ')' ';'  (80)
	invocacion_func : ID '(' . CTE ')' ';'  (81)
	invocacion_func : ID '(' . ')' error ';'  (82)
	invocacion_func : ID '(' . ID ')' error  (83)
	invocacion_func : ID '(' . CTE ')' error  (84)

	ID  shift 95
	CTE  shift 96
	')'  shift 97
	.  error


state 52
	factor : '-' . CTE  (137)
